--- a/AudioGraphInputFrameSizeDemoApp.vcxproj
+++ b/AudioGraphInputFrameSizeDemoApp.vcxproj
@@ -306,6 +306,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="App.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
